Trying to get the text wrapping to work. Also, there was only 1 test failing for Messages becuase of a commented out line, this commit should fix that (note that there are other tests failing, but that is becuase of game logic NOT becuase of the redefinition of messages

--- a/appGeo/src/app/chat/chat.component.css
+++ b/appGeo/src/app/chat/chat.component.css
@@ -1,3 +1,10 @@
+.test{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    -webkit-box-orient: vertical;  
+}
+
 .my-button {
     android-elevation: 4;
     background-color: lightseagreen;
